<resources>
    <string name="app_name">Story App</string>
    <string name="home">Home</string>
    <string name="konten_utama">Konten Utama</string>
    <string name="settings">Settings</string>
    <string name="konten_settings">Konten Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="write_amp_share_your_beautiful_stories"><![CDATA[Write & Share Your Beautiful Stories]]></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_n_story_app">Welcome to\n Story App</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="error_input_empty">Tidak boleh kosong</string>
    <string name="registration_success">Pendaftaran berhasil, Silahkan login</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="_4_hours_ago">4 Hours ago</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>


    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="include_current_location">Include Current Location</string>
</resources>