<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_landing_scene">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/welcome_illu" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Title1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_n_story_app"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/writing_illu" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Title1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/write_amp_share_your_beautiful_stories"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/registration_illu" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Title1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.button.MaterialButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:text="@string/sign_in"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:text="@string/sign_up"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>